--- a/intro.ipynb
+++ b/intro.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyMeHUg1CR2p0TiAbqi5de2f",
+      "authorship_tag": "ABX9TyPTiuWnutIL/dabipZX685j",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -92,9 +92,35 @@
     },
     {
       "cell_type": "code",
+      "source": [
+        "4+4"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "ieUYnLJxTcme",
+        "outputId": "2251b436-d346-4be5-f0fa-c05e0a960124"
+      },
+      "execution_count": 6,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "8"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 6
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
       "source": [],
       "metadata": {
-        "id": "ieUYnLJxTcme"
+        "id": "ShnFkSRfVHtn"
       },
       "execution_count": null,
       "outputs": []
